src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <inlineHelpText>Hold the &apos;ctrl&apos; key to select multiple types.</inlineHelpText>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>In Life Property Contact</fullName>
                </value>
                <value>
                    <fullName>Sales Contact</fullName>
                </value>
                <value>
                    <fullName>Out of Hours Contact</fullName>
                </value>
                <value>
                    <fullName>Legal Contact</fullName>
                </value>
                <value>
                    <fullName>Project Management Contact</fullName>
                </value>
                <value>
                    <fullName>Director Contact</fullName>
                </value>
                <value>
                    <fullName>Remittance - Finance</fullName>
                </value>
                <value>
                    <fullName>Statement - Finance</fullName>
                </value>
                <value>
                    <fullName>Purchase Ledger - Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Legal__c</fullName>
        <description>System field for Create Case flow.</description>
        <formula>INCLUDES(Contact_Type__c, &quot;Legal Contact&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPS Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__EnableEmailNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Email Notification (FM Community)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datapro__Count_of_Contacts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Contacts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>datapro__Total_Child_Records__c</fullName>
        <label>Total Child Records</label>
        <summaryForeignKey>datapro__Privacy_Detail__c.datapro__Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffbc__BillingContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this contact is sent billing documents for the account to which they belong. You can send billing documents to one contact per account. Select the checkbox for only one of the contacts associated with an account.</description>
        <inlineHelpText>Indicates whether this contact is sent billing documents for the account to which they belong. You can send billing documents to one contact per account. Select the checkbox for only one of the contacts associated with an account.</inlineHelpText>
        <label>Billing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contact_Type__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Billing_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Preference__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.External</value>
        </filters>
        <filters>
            <field>Contact_Type__c</field>
            <operation>equals</operation>
            <value>In Life Property Contact</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Billing Contacts</label>
    </listViews>
    <listViews>
        <fullName>Customer_Contacts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Contact_Type__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Property__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Customer Contacts</label>
    </listViews>
    <listViews>
        <fullName>Director_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Preference__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.External</value>
        </filters>
        <filters>
            <field>Contact_Type__c</field>
            <operation>equals</operation>
            <value>Director Contact</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Director Contacts</label>
    </listViews>
    <listViews>
        <fullName>In_Life_Property_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Preference__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.External</value>
        </filters>
        <filters>
            <field>Contact_Type__c</field>
            <operation>equals</operation>
            <value>In Life Property Contact</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>In Life Property Contacts</label>
    </listViews>
    <listViews>
        <fullName>Legal_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Preference__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.External</value>
        </filters>
        <filters>
            <field>Contact_Type__c</field>
            <operation>equals</operation>
            <value>Legal Contact</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Legal Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>Out_of_Hours_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Preference__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.External</value>
        </filters>
        <filters>
            <field>Contact_Type__c</field>
            <operation>equals</operation>
            <value>Out of Hours Contact</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Out of Hours Contacts</label>
    </listViews>
    <listViews>
        <fullName>Project_Management_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Preference__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.External</value>
        </filters>
        <filters>
            <field>Contact_Type__c</field>
            <operation>equals</operation>
            <value>Project Management Contact</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Project Management Contacts</label>
    </listViews>
    <listViews>
        <fullName>Purchase_Ledger_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Preference__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.External</value>
        </filters>
        <filters>
            <field>Contact_Type__c</field>
            <operation>equals</operation>
            <value>Statement - Finance</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Purchase Ledger Contacts</label>
    </listViews>
    <listViews>
        <fullName>Remittance_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Preference__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.External</value>
        </filters>
        <filters>
            <field>Contact_Type__c</field>
            <operation>equals</operation>
            <value>Remittance - Finance</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Remittance Contacts</label>
    </listViews>
    <listViews>
        <fullName>Sales_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Preference__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.External</value>
        </filters>
        <filters>
            <field>Contact_Type__c</field>
            <operation>equals</operation>
            <value>Sales Contact</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Sales Contacts</label>
    </listViews>
    <listViews>
        <fullName>Statement_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Preference__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.External</value>
        </filters>
        <filters>
            <field>Contact_Type__c</field>
            <operation>equals</operation>
            <value>Statement - Finance</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Statement Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Agent_Broker</fullName>
        <active>true</active>
        <label>Agent/Broker</label>
    </recordTypes>
    <recordTypes>
        <fullName>External</fullName>
        <active>true</active>
        <label>External</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Mobile_Number_Should_Start_With_07</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BEGINS(MobilePhone, &apos;07&apos;))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Mobile number should start with 07</errorMessage>
    </validationRules>
</CustomObject>